Changed around the Basket component within the HTML so the basket and amount are always visible and the basket content is only visible when hovered over. Changed the CSS so the basket is fixed within a wrapper div so it can stay fixed to the visible window.

--- a/06-Product-Listing-Page/products.css
+++ b/06-Product-Listing-Page/products.css
@@ -7,7 +7,6 @@
   clear: both;
 }
 
-
 .products_page {
   position: relative;
   width: 100%;
@@ -67,7 +66,7 @@ article p {
   width: 100%;
   height: 6px;
   margin-top: 0;
-  background: linear-gradient(to right, rgba(54,64,63,.05), rgba(54,64,63,.54));
+  background: linear-gradient(to right, rgba(54,64,63,.15), rgba(54,64,63,.54));
 }
 
 
@@ -93,26 +92,51 @@ article p {
     rgba(165,222,255,1), rgba(165,222,255,.90));
   border-top: 1px solid rgba(45,60,69,.26);
   border-bottom: 1px solid rgba(45,60,69,.26);
+  border-right: 1px solid rgba(45,60,69,.26);
 }
 
 .basket h3 {
   margin: 0;
   padding: 0;
+  float: right;
   text-align: right;
-  padding: 4px 4px 0 0;
+  margin: 0;
+  padding: 5px 4px 0 0;
 }
 
-.basket p {
+.basket .purchase_number {
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  float: left;
+  background: rgba(45,60,69,.86);
+  color: #fff;
+  text-align: center;
+  margin: 5px 0 0 6px;
+  padding-top: -2px;
+}
+
+.basket li ol {
+  display: none;
+}
+
+.basket li:hover ol {
   display: block;
-  height: 1rem;
-  margin-bottom: 16px;
 }
-
+.basket .price,
+.basket input[type="button"],
+.basket .total_price {
+  padding-right: 2px;
+}
+.basket .product_caption,
+.basket .price {
+  margin-top: 6px;
+}
 .basket .product_caption {
   float: left;
   width: 56%;
   font-size: .9em;
-  margin-top: 3px;
+  /*margin-top: 3px;*/
 }
 .basket .price {
   float: right;
@@ -123,6 +147,7 @@ article p {
 .basket .amount,
 .basket input[type="button"] {
   height: 24px;
+  margin-top: 6px;
 }
 .basket .amount {
   float: left;
@@ -142,14 +167,8 @@ article p {
   border-style: none;
   background: none;
   text-align: right;
-  padding-right: 0;
 }
 
-.basket .price,
-.basket input[type="button"],
-.basket .total_price {
-  padding-right: 2px;
-}
 
 .basket .product_caption,
 .total_text {
@@ -171,9 +190,11 @@ article p {
 }
 
 .basket button {
+  width: 100%;
   float: right;
+  text-align: right;
   background: none;
-  padding: 6px 2px;
+  padding: 8px 2px;
 }
 
 /********MEDIA QUERIES********/
